# geneteka-crawler

./: README.md  geneteka_crawler.py  pyproject.toml
